--- a/datascientest-jenkins/Jenkinsfile
+++ b/datascientest-jenkins/Jenkinsfile
@@ -1,6 +1,6 @@
 pipeline {
 environment { // Declaration of environment variables
-DOCKER_ID = "admin" // replace this with your docker-id
+DOCKER_ID = ""localhost:5000 // replace this with your docker-id
 DOCKER_IMAGE = "datascientestapi"
 DOCKER_TAG = "v.${BUILD_ID}.0" // we will tag our images with the current build in order to increment the value by 1 with each new build
 }
@@ -48,7 +48,7 @@ stages {
 
                 script {
                 sh '''
-                docker login -u $DOCKER_ID -p $DOCKER_PASS
+                docker login -u  admin -p $DOCKER_PASS
                 docker push $DOCKER_ID/$DOCKER_IMAGE:$DOCKER_TAG
                 '''
                 }
