--- a/datascientest-jenkins/Jenkinsfile
+++ b/datascientest-jenkins/Jenkinsfile
@@ -11,7 +11,8 @@ stages {
                 script {
                 sh '''
                  docker rm -f jenkins
-                 docker build -t $DOCKER_ID/$DOCKER_IMAGE:$DOCKER_TAG .
+                 pwd
+                 docker build -t $DOCKER_IMAGE:$DOCKER_TAG .
                 sleep 6
                 '''
                 }
