Jenkinsfile display pwd

--- a/datascientest-jenkins/Jenkinsfile
+++ b/datascientest-jenkins/Jenkinsfile
@@ -11,7 +11,7 @@ stages {
                 script {
                 sh '''
                  docker rm -f jenkins
-                 pwd
+                 ls -l $(pwd)
                  docker build -t $DOCKER_IMAGE:$DOCKER_TAG .
                 sleep 6
                 '''
