--- a/fastapi/templates/deployment.yaml
+++ b/fastapi/templates/deployment.yaml
@@ -25,7 +25,8 @@ spec:
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
-        {{- toYaml . | nindent 8 }}
+        #{{- toYaml . | nindent 8 }}
+        - regcred
       {{- end }}
       serviceAccountName: {{ include "fastapi.serviceAccountName" . }}
       securityContext:
