--- a/fastapi/templates/deployment.yaml
+++ b/fastapi/templates/deployment.yaml
@@ -25,8 +25,7 @@ spec:
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
-        #{{- toYaml . | nindent 8 }}
-        - regcred
+        {{- name: toYaml . | nindent 8 }}
       {{- end }}
       serviceAccountName: {{ include "fastapi.serviceAccountName" . }}
       securityContext:
