--- a/fastapi/templates/deployment.yaml
+++ b/fastapi/templates/deployment.yaml
@@ -25,7 +25,7 @@ spec:
     spec:
       #{{- with .Values.imagePullSecrets }}
       imagePullSecrets:
-        - name: credreg
+        - name: regcred
         #{{- toYaml . | nindent 8 }}
       #{{- end }}
       serviceAccountName: {{ include "fastapi.serviceAccountName" . }}
